Override the attribute for nagios_epoch. So it will give back proper date

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,6 +1,6 @@
 development:
   sessions:
     default:
-      database: bat_monitoring
+      database: nagios
       hosts:
         - localhost:27017
