aggregate data for user home screen

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,6 +1,6 @@
 development:
   sessions:
     default:
-      database: nagios
+      database: bat_monitoring
       hosts:
         - localhost:27017
